<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.todolist.MainActivity" 
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/input1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >    

    <Button
        android:id="@+id/todoview"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:onClick="todoview"
        android:text="@string/todoview" />

    <Button
        android:id="@+id/archived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="archived"
        android:text="@string/archived" />
    <Button
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="summary"
        android:text="@string/summary" />
            	
	</LinearLayout>

    <LinearLayout
        android:id="@+id/input2"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    
    <EditText
        android:id="@+id/body"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal" 
        android:hint="New todo item:"/>
    <Button
        android:id="@+id/save"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="save" />
    
 	</LinearLayout>

    <ListView
        android:id="@+id/todoListView"
        android:layout_width="fill_parent"
        android:layout_height="263dp"
        android:layout_weight="1"
        android:scrollbars="vertical" >

    </ListView>

    <LinearLayout
        android:id="@+id/input3"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >    


    <Button
      	android:id="@+id/archive"
      	android:layout_width="85dp"
      	android:layout_height="wrap_content"
      	android:onClick="archive"
      	android:text="@string/archive" />


    <Button
        android:id="@+id/delete"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:onClick="delete" />    
    <Button
        android:id="@+id/email"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:onClick="email" />     
    
    </LinearLayout>
        	
</LinearLayout>
